exercises/services-networking/foo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: foo
  name: foo
spec:
  ports:
  - name: 6262-8080
    port: 6262
    protocol: TCP
    targetPort: 8080
  selector:
    app: foo
  type: ClusterIP
status:
  loadBalancer: {}
